# AFEM

./: CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  matlaboutput.txt
AFEM/FEM/: CMakeLists.txt
AFEM/FEM/include/: AFEM_geometry.hpp  AFEM_io.hpp  AFEM_simulation.hpp
AFEM/FEM/source/: AFEM_cpu_solver.cpp  AFEM_geometry.cpp  AFEM_io.cpp  AFEM_simulation.cpp  AFEM_visualization.cpp
AFEM/cuda/: CMakeLists.txt
AFEM/cuda/gpu_include/: AFEM_Linear_routines.cuh  AFEM_cuda.cuh  AFEM_math.cuh
AFEM/cuda/gpu_source/: AFEM_QR_solver.cu  AFEM_corotational.cu  AFEM_corotational_energy_minimisation.cu  AFEM_cuda.cu  Utilities.cu
AFEM/include/: AFEM_geometry.hpp  AFEM_simulation.hpp  AFEM_visualization.hpp
AFEM/source/: AFEM_cpu_solver.cpp  AFEM_cuda.cu  AFEM_geometry.cpp  AFEM_simulation.cpp  AFEM_visualization.cpp  test_cuda.cpp
Geometry/: FEM_Elem.txt  FEM_Elem0.txt  FEM_Face.txt  FEM_Nodes.txt  FEM_Nodes0.txt  FEM_SideConstraints.txt  FEM_Stationary.txt
build_old/: AFEM.sln  AFEM.vcxproj  AFEM.vcxproj.filters  ALL_BUILD.vcxproj  CMakeCache.txt  CV_TEST.vcxproj  FEM_Nodes.txt  FEM_TEST.vcxproj.filters  ZERO_CHECK.vcxproj  cmake_install.cmake  dll_cv_includes.vcxproj.filters  dll_includes.vcxproj  dll_includes.vcxproj.filters  geometry  geometry.stl
build_old/AFEM/FEM/: FEM_lib.vcxproj.filters  cmake_install.cmake
build_old/AFEM/cuda/: AFEM_cuda_lib.vcxproj
build_old/Debug/: AFEM.ilk  FEM_TEST.ilk
build_old/cv_wrappers/: CV_CUSTOM_WRAPPER.vcxproj  CV_CUSTOM_WRAPPER.vcxproj.filters  cmake_install.cmake
build_old/cv_wrappers/Debug/: CV_CUSTOM_WRAPPER.lib
camera_info/: Right_Intrinsic_ovr.xml  Stereo_Prop_ovr.xml
cv_wrappers/: CMakeLists.txt
cv_wrappers/include/: aruco_tools.h  cv_custom_wrapper_types.h  cv_io.h  hough_circle.h  optic_flow.h  raytracer.h  stereo.h  surf.h  viz_tools.h  viz_widget.h
cv_wrappers/source/: aruco_tools.cpp  cv_io.cpp  hough_circle.cpp  optic_flow.cpp  raytracer.cpp  stereo.cpp  surf.cpp  viz_tools.cpp  viz_widget.cpp
experiment/: experiment_abdominal_phantom.cpp
lib/: freeglut_staticd.lib  freeglutd.exp  freeglutd.lib  glew32d.lib  ovrvision64.lib  ovrvision64d.lib
matlab/: ablation_phantom.asv  ablation_phantom.m  analyze_matrices.m  find_index_mesh.m  find_index_structure.m  generate_mesh.m  generate_mesh_augmented_reality.m  parameter_estimation.m  raytrace.m  read_results.m  readnode_CMGUI.asv  readnode_CMGUI.m
matlab/AFEM_FEM_OUT/: fem_0001.txt  fem_0002.txt  fem_0003.txt  fem_0004.txt  fem_0005.txt  fem_0006.txt  fem_0007.txt  fem_0008.txt  fem_0009.txt  fem_0010.txt  fem_0011.txt  fem_0012.txt  fem_0013.txt  fem_0014.txt  fem_0015.txt  fem_0016.txt  fem_0017.txt  fem_0018.txt  fem_0019.txt  fem_0020.txt  fem_0021.txt  fem_0022.txt  fem_0023.txt  fem_0024.txt  fem_0025.txt  fem_0026.txt  fem_0027.txt  fem_0028.txt  fem_0029.txt  fem_0030.txt  fem_0031.txt  fem_0032.txt  fem_0033.txt  fem_0034.txt  fem_0035.txt  fem_0036.txt  fem_0037.txt  fem_0038.txt  fem_0039.txt  fem_0040.txt  (+60 more)
matlab/AFEM_OUTPUT/: output_fem0000.txt  output_fem0004.txt  output_fem0005.txt  output_fem0007.txt  output_fem0009.txt  output_fem0013.txt  output_fem0014.txt  output_fem0015.txt  output_fem0016.txt  output_fem0020.txt  output_fem0029.txt  output_fem0030.txt  output_fem0034.txt  output_fem0035.txt  output_fem0036.txt  output_fem0037.txt  output_fem0039.txt  output_fem0040.txt  output_fem0041.txt  output_fem0042.txt  output_fem0043.txt  output_fem0045.txt  output_fem0047.txt  output_fem0048.txt  output_fem0049.txt  output_fem0051.txt  output_fem0052.txt  output_fem0053.txt  output_fem0055.txt  output_fem0058.txt  output_fem0059.txt  output_fem0060.txt  output_fem0061.txt  output_fem0062.txt  output_fem0063.txt  output_fem0064.txt  output_fem0070.txt  output_fem0071.txt  output_fem0072.txt  output_fem0074.txt  (+278 more)
matlab/AFEM_OUTPUT - 17_25mm/: output_fem0001.txt  output_fem0002.txt  output_fem0003.txt  output_fem0006.txt  output_fem0008.txt  output_fem0010.txt  output_fem0011.txt  output_fem0012.txt  output_fem0017.txt  output_fem0018.txt  output_fem0019.txt  output_fem0021.txt  output_fem0022.txt  output_fem0023.txt  output_fem0024.txt  output_fem0025.txt  output_fem0026.txt  output_fem0027.txt  output_fem0028.txt  output_fem0031.txt  output_fem0032.txt  output_fem0033.txt  output_fem0038.txt  output_fem0044.txt  output_fem0046.txt  output_fem0050.txt  output_fem0054.txt  output_fem0056.txt  output_fem0057.txt  output_fem0065.txt  output_fem0066.txt  output_fem0067.txt  output_fem0068.txt  output_fem0069.txt  output_fem0073.txt  output_fem0082.txt  output_fem0083.txt  output_fem0085.txt  output_fem0086.txt  output_fem0088.txt  (+260 more)
matlab/AFEM_PARAMETER/final/: fem_final_0.txt  fem_final_1.txt  fem_final_10.txt  fem_final_100.txt  fem_final_101.txt  fem_final_102.txt  fem_final_103.txt  fem_final_104.txt  fem_final_105.txt  fem_final_106.txt  fem_final_107.txt  fem_final_108.txt  fem_final_109.txt  fem_final_11.txt  fem_final_110.txt  fem_final_111.txt  fem_final_112.txt  fem_final_113.txt  fem_final_114.txt  fem_final_115.txt  fem_final_116.txt  fem_final_117.txt  fem_final_118.txt  fem_final_119.txt  fem_final_12.txt  fem_final_120.txt  fem_final_121.txt  fem_final_122.txt  fem_final_123.txt  fem_final_124.txt  fem_final_125.txt  fem_final_126.txt  fem_final_127.txt  fem_final_128.txt  fem_final_129.txt  fem_final_13.txt  fem_final_130.txt  fem_final_131.txt  fem_final_132.txt  fem_final_133.txt  (+260 more)
matlab/AFEM_PARAMETER/initial/: fem_initial_163.txt
matlab/AFEM_PARAMETER/parameter/: fem_parameter_0.txt  fem_parameter_1.txt  fem_parameter_10.txt  fem_parameter_100.txt  fem_parameter_101.txt  fem_parameter_102.txt  fem_parameter_103.txt  fem_parameter_104.txt  fem_parameter_105.txt  fem_parameter_106.txt  fem_parameter_107.txt  fem_parameter_108.txt  fem_parameter_109.txt  fem_parameter_11.txt  fem_parameter_110.txt  fem_parameter_111.txt  fem_parameter_112.txt  fem_parameter_113.txt  fem_parameter_114.txt  fem_parameter_115.txt  fem_parameter_116.txt  fem_parameter_117.txt  (+278 more)
matlab/html/: read_results.html
tests/: test_cv.cpp  test_fem.cpp
(+34 files in other folders)
